[package]
name = "storykeep"
description = "Version control tailored for writers"
version = "0.2.0"
readme = "README.md"
authors = ["Dídac Sementé Fernández <didac.semente@gmail.com>"]
license = "MIT"
edition = "2018"
categories = ["command-line-utilities", "text-processing"]
keywords = ["vcs", "writing", "cli"]
autobins = false

[lib]
name = "storykeep"
path = "src/lib.rs"

[[bin]]
name = "sk-cli"
path = "src/main.rs"

[dependencies]
clap = "~2.33.0"
twox-hash = "~1.5.0"
